--- a/src/com/vaadin/tests/components/link/LinkTargetSize.html
+++ b/src/com/vaadin/tests/components/link/LinkTargetSize.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/Vaadin6.1/run/com.vaadin.tests.components.link.LinkTargetSize</td>
+	<td>/run/com.vaadin.tests.components.link.LinkTargetSize</td>
 	<td></td>
 </tr>
 <tr>
@@ -23,7 +23,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>vaadin=Vaadin61runcomvaadintestscomponentslinkLinkTargetSize::/VVerticalLayout[0]/ChildComponentContainer[1]/VVerticalLayout[0]/ChildComponentContainer[0]/VLink[0]/domChild[0]/domChild[0]</td>
+	<td>vaadin=runcomvaadintestscomponentslinkLinkTargetSize::/VVerticalLayout[0]/ChildComponentContainer[1]/VVerticalLayout[0]/ChildComponentContainer[0]/VLink[0]/domChild[0]/domChild[0]</td>
 	<td></td>
 </tr>
 <tr>
