--- a/src/com/vaadin/tests/components/button/DisabledButtons.html
+++ b/src/com/vaadin/tests/components/button/DisabledButtons.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/Vaadin6.1/run/com.vaadin.tests.components.button.DisabledButtons</td>
+	<td>/run/com.vaadin.tests.components.button.DisabledButtons</td>
 	<td></td>
 </tr>
 <tr>
