--- a/src/com/vaadin/tests/components/checkbox/CheckboxIcon.html
+++ b/src/com/vaadin/tests/components/checkbox/CheckboxIcon.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/Vaadin6.1/run/com.vaadin.tests.components.checkbox.CheckboxIcon</td>
+	<td>/run/com.vaadin.tests.components.checkbox.CheckboxIcon</td>
 	<td></td>
 </tr>
 <tr>
@@ -33,7 +33,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>vaadin=Vaadin61runcomvaadintestscomponentscheckboxCheckboxIcon::/VVerticalLayout[0]/ChildComponentContainer[1]/VVerticalLayout[0]/ChildComponentContainer[0]/VCheckBox[0]/domChild[0]</td>
+	<td>vaadin=runcomvaadintestscomponentscheckboxCheckboxIcon::/VVerticalLayout[0]/ChildComponentContainer[1]/VVerticalLayout[0]/ChildComponentContainer[0]/VCheckBox[0]/domChild[0]</td>
 	<td></td>
 </tr>
 <tr>
@@ -43,7 +43,7 @@
 </tr>
 <tr>
 	<td>mouseOver</td>
-	<td>vaadin=Vaadin61runcomvaadintestscomponentscheckboxCheckboxIcon::/VVerticalLayout[0]/ChildComponentContainer[1]/VVerticalLayout[0]/ChildComponentContainer[0]/VCheckBox[0]/domChild[0]</td>
+	<td>vaadin=runcomvaadintestscomponentscheckboxCheckboxIcon::/VVerticalLayout[0]/ChildComponentContainer[1]/VVerticalLayout[0]/ChildComponentContainer[0]/VCheckBox[0]/domChild[0]</td>
 	<td></td>
 </tr>
 <tr>
