--- a/src/com/vaadin/tests/components/embedded/EmbeddedTooltip.html
+++ b/src/com/vaadin/tests/components/embedded/EmbeddedTooltip.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/Vaadin6.1/run/com.vaadin.tests.components.embedded.EmbeddedTooltip</td>
+	<td>/run/com.vaadin.tests.components.embedded.EmbeddedTooltip</td>
 	<td></td>
 </tr>
 <tr>
@@ -28,7 +28,7 @@
 </tr>
 <tr>
 	<td>mouseOver</td>
-	<td>vaadin=Vaadin61runcomvaadintestscomponentsembeddedEmbeddedTooltip::/VVerticalLayout[0]/ChildComponentContainer[1]/VVerticalLayout[0]/ChildComponentContainer[0]/VEmbedded[0]/domChild[0]</td>
+	<td>vaadin=runcomvaadintestscomponentsembeddedEmbeddedTooltip::/VVerticalLayout[0]/ChildComponentContainer[1]/VVerticalLayout[0]/ChildComponentContainer[0]/VEmbedded[0]/domChild[0]</td>
 	<td></td>
 </tr>
 <tr>
