--- a/src/com/vaadin/tests/components/form/FormRenderingFlicker.html
+++ b/src/com/vaadin/tests/components/form/FormRenderingFlicker.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/Vaadin6.1/run/com.vaadin.tests.components.form.FormRenderingFlicker</td>
+	<td>/run/com.vaadin.tests.components.form.FormRenderingFlicker</td>
 	<td></td>
 </tr>
 <tr>
@@ -28,7 +28,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>vaadin=Vaadin61runcomvaadintestscomponentsformFormRenderingFlicker::/VVerticalLayout[0]/ChildComponentContainer[1]/VVerticalLayout[0]/ChildComponentContainer[0]/VPanel[0]/VVerticalLayout[0]/ChildComponentContainer[0]/VScrollTable[0]/domChild[1]/domChild[0]/domChild[1]/domChild[0]/domChild[1]/domChild[0]</td>
+	<td>vaadin=runcomvaadintestscomponentsformFormRenderingFlicker::/VVerticalLayout[0]/ChildComponentContainer[1]/VVerticalLayout[0]/ChildComponentContainer[0]/VPanel[0]/VVerticalLayout[0]/ChildComponentContainer[0]/VScrollTable[0]/domChild[1]/domChild[0]/domChild[1]/domChild[0]/domChild[1]/domChild[0]</td>
 	<td></td>
 </tr>
 <tr>
