--- a/src/com/vaadin/tests/components/orderedlayout/ReplaceComponentNPE.html
+++ b/src/com/vaadin/tests/components/orderedlayout/ReplaceComponentNPE.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/Vaadin6.1/run/com.vaadin.tests.components.orderedlayout.ReplaceComponentNPE</td>
+	<td>/run/com.vaadin.tests.components.orderedlayout.ReplaceComponentNPE</td>
 	<td></td>
 </tr>
 <tr>
@@ -28,7 +28,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>vaadin=Vaadin61runcomvaadintestscomponentsorderedlayoutReplaceComponentNPE::/VVerticalLayout[0]/ChildComponentContainer[1]/VVerticalLayout[0]/ChildComponentContainer[1]/VButton[0]/domChild[0]/domChild[0]</td>
+	<td>vaadin=runcomvaadintestscomponentsorderedlayoutReplaceComponentNPE::/VVerticalLayout[0]/ChildComponentContainer[1]/VVerticalLayout[0]/ChildComponentContainer[1]/VButton[0]/domChild[0]/domChild[0]</td>
 	<td></td>
 </tr>
 <tr>
