--- a/src/com/vaadin/tests/components/table/ColumnCollapsingAndColumnExpansion.html
+++ b/src/com/vaadin/tests/components/table/ColumnCollapsingAndColumnExpansion.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/Vaadin6.1/run/com.vaadin.tests.components.table.ColumnCollapsingAndColumnExpansion</td>
+	<td>/run/com.vaadin.tests.components.table.ColumnCollapsingAndColumnExpansion</td>
 	<td></td>
 </tr>
 <tr>
@@ -28,7 +28,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>vaadin=Vaadin61runcomvaadintestscomponentstableColumnCollapsingAndColumnExpansion::/VVerticalLayout[0]/ChildComponentContainer[1]/VVerticalLayout[0]/ChildComponentContainer[0]/VScrollTable[0]/domChild[0]/domChild[1]</td>
+	<td>vaadin=runcomvaadintestscomponentstableColumnCollapsingAndColumnExpansion::/VVerticalLayout[0]/ChildComponentContainer[1]/VVerticalLayout[0]/ChildComponentContainer[0]/VScrollTable[0]/domChild[0]/domChild[1]</td>
 	<td></td>
 </tr>
 <tr>
